refactor: Clean-up